    * 4095 new filter host auxiliary tags
    * 4106 new filter host/service-service-level...
    * 4107 Now you are able to search for check plugins
    * 3997 New metric for mrpe/check_icmp...
    * 4083 Web API: Always output full traceback in case of non Check_MK unhandled exceptions
    * 4135 View CSV export: Group cells are added in front of the regular cells for each row...
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
    * 3981 FIX: Views: Fixed context button displaying depending on usage
    * 4071 FIX: Removed notes_url from "LOG *" logwatch services...
    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts
    * 4080 FIX: Fixed possible exception "unsupported operand type" in matrix views
    * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
    * 4128 FIX: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
    * 4129 FIX: Fixed possible exception when a view is linking to a not permitted other view

    WATO:
    * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
    * 4044 Display host/service notification delay with d/h/m/s, not with fractions of minute
    * 4075 Activate Changes has been reworked...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...
    * 3975 FIX: Improved error handling when trying to edit not existing global setting
    * 3976 FIX: Fixed broken link in LDAP automatic sync help text