@@ -1,0 +1,9 @@
+Title: Availability CSV export: Adding grouping title as first column in case of grouped views
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1481189103
+Class: feature
+
+
