@@ -54,6 +54,7 @@
     * 3997 New metric for mrpe/check_icmp...
     * 4083 Web API: Always output full traceback in case of non Check_MK unhandled exceptions
     * 4135 View CSV export: Group cells are added in front of the regular cells for each row...
+    * 4136 Availability CSV export: Adding grouping title as first column in case of grouped views
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
